public/css/components/atomic.css
.container {
  width: 100%;
  @media (width >= 40rem) {
    max-width: 40rem;
  }
  @media (width >= 48rem) {
    max-width: 48rem;
  }
  @media (width >= 64rem) {
    max-width: 64rem;
  }
  @media (width >= 80rem) {
    max-width: 80rem;
  }
  @media (width >= 96rem) {
    max-width: 96rem;
  }
}
.min-container {
  width: 100%;
  @media (width >= 40rem) {
    max-width: 40rem;
  }
  @media (width >= 48rem) {
    max-width: 48rem;
  }
  @media (width >= 64rem) {
    max-width: 64rem;
  }
}

.gradient-text {
  background: linear-gradient(90deg, var(--primary), var(--color-teal-500));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.section-header {
  font-size: var(--text-7xl);
  font-weight: var(--font-weight-bold);
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 1.2;
}

.section-description {
  color: var(--neutral-600);
  text-align: center;
  text-wrap: balance;
  max-width: var(--breakpoint-md);
}

